Jarvis can now do basic controls for Nest thermostats (I want the Living Room Cool).  Fixed emoji that was too big and breaking.  Increased vibrate() for other devices.  Added some feature detection for Notification instead of throwing a console error.  SmartThings *should* now update Jarvis mood on polled update (untested).

--- a/css/common.css
+++ b/css/common.css
@@ -827,6 +827,7 @@ section .preview-image img {
 
 section .emoji {
 	float: none;
+	font-size: 90%;
 	margin: 0 auto;
 	overflow: hidden;
 	padding: 1em 0;
